[package]
name = "wasm"
version = "0.1.0"
authors = ["Benjamin Bouvier <public@benj.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
texture-synthesis = { git = "http://github.com/bnjbvr/texture-synthesis", branch = "wasm-progress" }
wasm-bindgen = "0.2.68"

[profile.release]
lto = true
